# ohos_lycium_cld2

./: README.md  build.sh
cld2/: CMakeLists.txt  HPKBUILD
